# se-linux-compat

./: .gitignore  AGENTS.md  Directory.Build.props  LICENSE  LinuxCompat.sln  LinuxCompat.xml  README.md  ScriptCase.md
ClientPlugin/: App.config  ClientPlugin.csproj  D3DCompilerResolver.cs  DxvkResolver.cs  HavokResolver.cs  NativeWrapperResolver.cs  Plugin.cs  Preloader.cs
ClientPlugin/Audio/: MySdlAudioInterop.cs  SdlAudio.cs  XAudio2Shim.cs
ClientPlugin/Compatibility/: HavokLinux.cs  MainThreadDispatcher.cs  MySdlSplashScreen.cs  PluginWindowConfig.cs  RecastDetourLinux.cs  SdlClipboard.cs  SdlGameWindow.cs  SdlIconHelper.cs  SdlRenderThread.cs  VRageNativeLinux.cs
ClientPlugin/Compatibility/Rendering/: D3DCompilerLinux.cs
ClientPlugin/Compatibility/Video/: MyLinuxVideoPlayer.cs
ClientPlugin/Patches/Audio/: MyCueBankGetVoicePatch.cs  MyInMemoryWavePatch.cs  MyWaveBankPathPatch.cs
ClientPlugin/Patches/NullSafety/: MyAIComponentPatch.cs  MyAsyncSavingPatch.cs  MyFloatingObjectsPatch.cs  MyGasTankPatch.cs  MyGuiControlToolbarPatch.cs  MyPhysicsPatch.cs  MyShadowCascadesPatch.cs  MyToolbarItemCubeBlockPatch.cs  SessionComponentRegistrationPatch.cs  SubpartSafetyPatches.cs
ClientPlugin/Patches/PathHandling/: FileTextureImageCachePatch.cs  FontPathDiagnosticPatch.cs  GuiTextureAtlasDefinitionPatch.cs  LODDescriptorPatch.cs  ModelPathPatch.cs  MwmUtilsPatch.cs  (+20 more)
ClientPlugin/Rewriter/: PathSubstitutionRewriter.cs  RewriterRegistration.cs  WindowsPath.cs  WindowsStopwatch.cs  WindowsTextWriter.cs
ClientPlugin/Tools/: GameAssembliesToPublicize.cs  IgnoresAccessChecksToAttribute.cs  PreloaderHelpers.cs  TranspilerHelpers.cs
NativeWrappers/: CMakeLists.txt  CMakePresets.json  Makefile
NativeWrappers/src/: D3DCompiler.cpp  Havok.cpp  HavokThunkRegistry.h  HavokThunk_bool_ptr_ptr.cpp  HavokThunk_float_ptr.cpp  HavokThunk_int_ptr_ptr_uint_ptr.cpp  HavokThunk_void_charptr.cpp  HavokThunk_void_charptr_int.cpp  HavokThunk_void_i64.cpp  HavokThunk_void_ptr.cpp  HavokThunk_void_ptr_int.cpp  HavokThunk_void_ptr_int_ptr.cpp  HavokThunk_void_ptr_ptr.cpp  HavokThunk_void_void.cpp  RecastDetour.cpp  VRageNative.cpp  cpu_features.cpp  cpu_features.h  dll_loader.cpp  dll_loader.h  main.cpp  pe_loader.cpp  pe_loader.h  support.h  win_types.h  winlibs.cpp  winlibs.h
(+40 files in other folders)
